# pydantic-ai-streaming

./: .gitignore  AGENTS.md  README.md  TODO.md  basic-page.md  cspell.json  docker-compose.yml  eslint.config.ts  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026-04-02_initial.py  2026-04-02_initial_chat_schema.py  2026-04-03_chat_conversation_message_schema.py  2026-04-05_add_absurd_flow_type.py  2026-04-06_pending_tool_call_schema.py
apps/api/src/streaming_chat_api/: absurd_worker.py  agents.py  cli.py  database.py  dbos_streaming.py  dependencies.py  e2e_server.py  hitl_forms.py  logging.py  main.py  models.py  replay.py  repository.py  resources.py  schemas.py  settings.py  support_client.py  temporal_activities.py  temporal_health.py  temporal_runtime.py  temporal_streaming.py  temporal_worker.py  temporal_worker_healthcheck.py  temporal_workflow.py  ui.py
apps/api/src/streaming_chat_api/agents/: registry.py
apps/api/src/streaming_chat_api/clients/: fake_support.py
apps/api/src/streaming_chat_api/config/: settings.py  url_utils.py
apps/api/src/streaming_chat_api/db/: base.py  session.py
apps/api/src/streaming_chat_api/dependencies/: resources.py
apps/api/src/streaming_chat_api/models/: __init__.py  entities.py
apps/api/src/streaming_chat_api/prompts/: research_system_prompt.txt  support_system_prompt.txt
apps/api/src/streaming_chat_api/repositories/: chat.py
apps/api/src/streaming_chat_api/routers/: __init__.py  absurd.py  basic.py  dbos.py  dbos_replay.py  flows.py  health.py  temporal.py
apps/api/src/streaming_chat_api/schemas/: chat.py  health.py  pagination.py
apps/api/src/streaming_chat_api/services/: absurd.py  basic.py  chat.py  common.py  dbos.py  dbos_replay.py  hitl.py  replay.py  runtime.py  temporal.py
apps/api/src/streaming_chat_api/temporal/: __init__.py  worker.py  workflows.py
apps/api/tests/: conftest.py  docker-compose.yml
apps/api/tests/e2e/: test_cli_replay.py  test_dbos_flow.py
apps/api/tests/integration/: test_absurd_streaming_routes.py  test_chat_flow.py  test_chat_flow_llm.py  test_dbos_real_streaming.py  test_dbos_streaming_routes.py  test_health.py  test_migrations.py  test_postgres_persistence.py  test_replay.py  test_temporal_flow.py  test_validation.py
apps/api/tests/unit/: test_absurd_streaming.py  test_agents.py  test_chat_common.py  test_chat_service.py  test_cli.py  test_dbos_streaming.py  test_hitl.py  test_repository.py  test_settings.py  test_temporal_runtime.py  test_temporal_worker.py  test_temporal_workflow.py
(+123 files in other folders)
